grunt and npm setup updated

--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "Grunt_noBuild_no_server",
-  "version": "0.0.0",
-  "description": "Blueriw",
+  "name": "Bootstrap4",
+  "version": "1.0.0",
+  "description": "Blueriq theme based on Bootstrap 4",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "M.D. van Es",
+  "author": "V. Lichtenberg",
   "license": "Closed",
   "private": true,
   "devDependencies": {
+    "bootstrap": "^4.0.0-alpha.3",
     "grunt": "^0.4.5",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-complexity": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-http-server": "^1.1.0",
     "grunt-execute": "^0.2.2",
+    "grunt-http-server": "^1.1.0",
     "grunt-jscs": "^1.6.0",
     "grunt-kot2html": "^0.1.0",
     "grunt-lintspaces": "^0.6.0",
     "grunt-notify": "^0.4.1",
+    "grunt-sass": "^1.2.1",
     "load-grunt-tasks": "^0.6.0",
     "time-grunt": "^0.3.2"
   },
